made FF browser specific changes to css

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="overlay"></div>
   <header>
     <a class="logo" href="index.html">
-      <img src="img/lowcitieslogo.svg">
+      <img src="img/lowcitieslogo.svg" alt="main-logo">
     </a>
     <div class="nav_menu">
-      <img class="button" src="img/box.png">
+      <img class="button" src="img/box.png" alt="menu-hamburger">
       <h5 class="nav">MENU</h5>
     </div>
   </header>
@@ -48,7 +48,7 @@
         <div id="content" class="content">
           <!--About section-->
           <div id="about" class="about container">
-            <div class="biopic img-shadow"  alt="DL"></div>
+            <div class="biopic img-shadow"></div>
                 <div class="intro">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
                   </p>
@@ -80,7 +80,7 @@
           <!--Music page-->
           <div id="music" class="music full">
             <h1 class="headline img-shadow">MUSIC PRODUCTION</h1>
-            <section class="container fade-container">
+            <div class="container fade-container">
               <div class="music-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
@@ -97,7 +97,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
 
-            </section>
+            </div>
           </div>
           <!--Photo section-->
          <section>
@@ -109,8 +109,8 @@
                   <div id="photoFrame"></div>
                   <div id="photoSelector" class="photoSelector"></div>
                 </div>
-                  <img src="img/arrow_left.svg" class="arrowLeft">
-                  <img src="img/arrow_right.svg" class="arrowRight">
+                  <img src="img/arrow_left.svg" class="arrowLeft" alt="left-arrow">
+                  <img src="img/arrow_right.svg" class="arrowRight" alt="right-arrow">
 
               </div>
             </div>
