updated social netwoking icon section and added fade effect to the photo carousel.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="img/lowcitieslogo.svg" alt="main-logo">
     </a>
     <div class="nav_menu">
-      <img class="button" src="img/box.png" alt="menu-hamburger">
+      <span class="button" alt="menu-hamburger"></span>
       <h5 class="nav">MENU</h5>
     </div>
   </header>
@@ -57,7 +57,7 @@
           <!--End of About Section-->
           <!--Portfolio section-->
           <div id="portfolio" class="full">
-            <h1 class="headline img-shadow">Web Design Portfolio</h1>
+            <h1 class="headline">Web Design Portfolio</h1>
             <div class="container fade-container">
               <div class="portfolio-content">
                 <div class="site-one-photo img-shadow"></div>
@@ -79,7 +79,7 @@
           <!--End of portfolio section-->
           <!--Music page-->
           <div id="music" class="music full">
-            <h1 class="headline img-shadow">MUSIC PRODUCTION</h1>
+            <h1 class="headline">MUSIC PRODUCTION</h1>
             <div class="container fade-container">
               <div class="music-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
@@ -102,7 +102,7 @@
           <!--Photo section-->
          <section>
             <div id="photoContainer" class="photoContainer full">
-              <h1 class="headline img-shadow">Photography/Graphic Design</h1>
+              <h1 class="headline">Photography/<br>Graphic Design</h1>
               <div class="container fade-container photo-flex">
 
                 <div class="photoBox">
@@ -117,25 +117,21 @@
           </section>
           <!--End photo section-->
 
-
-        <footer>
+    <footer>
       <div class="social">
-        <div class="twitter"><a href="http://twitter.com/lowcities"></a></div>
-        <div class="insta"><a href="http://instagram.com/lowcities"></a></div>
-        <div class="linkdin"></div>
-        <div class="github"></div>
-        </div>
+        <a href="http://twitter.com/lowcities"><i class="twitter"></i></a>
+        <a href="http://instagram.com/lowcities"><i class="insta"></i></a>
+        <a><i class="linkdin"></i></a>
+        <a><i class="github"></i></a>
+      </div>  
       <h3>&copy;2017 David Low</h3>
-
     </footer>
-      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script
     src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="js/photos.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
