--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
         <div id="content" class="content">
           <!--About section-->
           <div id="about" class="about container">
-            <div class="biopic img-shadow"></div>
-                <div class="intro">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
-                  </p>
-                </div>
+            <div class="background">
+              <div class="about-container">
+                <div class="about-background"></div>
+                <div class="biopic img-shadow"></div>
+                    <div class="intro">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
+                      </p>
+                    </div>
+              </div>
+            </div>
           </div>
           <!--End of About Section-->
           <!--Portfolio section-->
