added animation to the main header and updated style of photo selector circles

--- a/index.html
+++ b/index.html
@@ -13,13 +13,21 @@
   </head>
     <div class="overlay"></div>
   <header>
-    <a class="logo" href="index.html">
-      <img src="img/lowcitieslogo.svg" alt="main-logo">
-    </a>
-    <div class="nav_menu">
-      <span class="button" alt="menu-hamburger"></span>
-      <h5 class="nav">MENU</h5>
-    </div>
+    <div class="city-background"></div>
+      <div class="logo-container">
+        <div class="logo-background"></div>
+        <a class="logo" href="index.html">
+          <img src="img/lowcitieslogo.svg" alt="main-logo">
+        </a>
+      </div>
+      <div class="mobile-header">
+        <div class="nav_menu">
+          <span class="button" alt="menu-hamburger"></span>
+          <h5 class="nav">MENU</h5>
+        </div>
+        <div class="mobile-logo">LOWCITIES/MULTI-MEDIA PRODUCTION</div>
+      </div>
+    
   </header>
   <body>
     <div class="wrapper">
