added photo to carousel. set up changes to menu button.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         </a>
       </div>
       <div class="mobile-header">
-        <div class="nav_menu">
-          <span class="button" alt="menu-hamburger"></span>
-          <h5 class="nav">MENU</h5>
+        <div class="nav_menu button">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
         <div class="mobile-logo">LOWCITIES/MULTI-MEDIA PRODUCTION</div>
       </div>
