optimized images and improved performance for safari browsers

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   </head>
     <div class="overlay"></div>
   <header>
-    <div class="city-background"></div>
-      <div class="logo-container">
-        <div class="logo-background"></div>
-        <a class="logo" href="index.html">
-          <img src="img/lowcitieslogo.svg" alt="main-logo">
-        </a>
-      </div>
+    <div class="header-overflow">
+      <div class="city-background"></div>
+        <div class="logo-container">
+          <div class="logo-background"></div>
+          <a class="logo" href="index.html">
+            <img src="img/lowcitieslogo.svg" alt="main-logo">
+          </a>
+        </div>
+    </div>
       <div class="mobile-header">
         <div class="nav_menu">
           <span></span>
@@ -100,13 +102,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
                 <div class="track track1">
-                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222370619&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+               <!--<iframe class="img-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>-->
               </div>
               <div class="music-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
               <div class="track track2">
-                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                <!--<iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>-->
               </div>
               <div class="music-info">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
