added a modal window

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <div class="wrapper">
   <!--Navigation section-->
-      <nav id="menu" class="menu menu-hide">
+      <nav id="menu" class="menu">
         <div class="navLogo">
           <a href="index.html">LOWCITIES</a>
         </div>
@@ -53,7 +53,7 @@
           <a href="#photoContainer">PHOTOGRAPHY</a>
         </div>
         <div class="navItem">
-          <a href="photos.html">CONTACT</a>
+          <a href="#contact">CONTACT</a>
         </div>
         </nav>
   <!--End navigation section-->
@@ -133,7 +133,22 @@
             </div>
           </section>
           <!--End photo section-->
-
+          <!--Modal Section-->
+          <section>
+            <div id="contact" class="modal full"> 
+              <!--<input id="modal__trigger" type="checkbox">
+              <label for="modal__trigger" class="modal-button">Contact Me</label>-->
+              <div class="modal-button">Contact Me</div>
+              <div class="modal-overlay">
+                <div class="modal-wrap">
+                  <div class="modal-close">&#10006;</div>
+                  <h2>This is your Modal</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.</p>
+                </div>
+              </div>
+            </div>
+          </section>
+          <!--End modal section-->
     <footer>
       <div class="social">
         <a href="http://twitter.com/lowcities"><i class="twitter"></i></a>
