improved modal section for safari browser

--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@
           <!--End photo section-->
           <!--Modal Section-->
           <section>
-            <div id="contact" class="modal full"> 
-              <!--<input id="modal__trigger" type="checkbox">
-              <label for="modal__trigger" class="modal-button">Contact Me</label>-->
+            <div id="contact" class="contact"> 
               <div class="modal-button">Contact Me</div>
               <div class="modal-overlay">
                 <div class="modal-wrap">
