added contact form to modal section.

--- a/index.html
+++ b/index.html
@@ -140,8 +140,22 @@
               <div class="modal-overlay">
                 <div class="modal-wrap">
                   <div class="modal-close">&#10006;</div>
-                  <h2>This is your Modal</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.</p>
+                  <h2>General Info</h2>
+                  <p>I just need some basic info about you and your project, please fill out the form below.</p>
+                  <!--Contact Form-->
+                  <form class="contact-form" action="#"  method="POST">
+                    <label for="name"></label>
+                    <input class="gutter" type="text" name="name" placeholder="Name *">
+                    <label for="email"></label>
+                    <input type="text" name="email" placeholder="Email address *">
+                    <label for="phone"></label>
+                    <input class="gutter" type="text" name="phone" placeholder="Phone number">
+                    <label for="website"></label>
+                    <input type="text" name="website" placeholder="Website">
+                    <textarea class="message gutter" placeholder="Details about your project"></textarea>
+                    <input class="submit-button gutter" type="submit" name="submit" value="Submit">
+                  </form>
+                  <!--End Contact Form-->
                 </div>
               </div>
             </div>
@@ -162,6 +176,7 @@
     src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
     crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="js/photos.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
