--- a/index.html
+++ b/index.html
@@ -98,18 +98,19 @@
           <!--Music page-->
           <div id="music"  class="music full">
             <h1 class="headline">MUSIC PRODUCTION</h1>
+            <!--<img class="headline" src="img/headlinesample.svgz">-->
             <div class="container fade-container">
               <div class="music-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
                 <div class="track track1">
-               <!--<iframe class="img-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>-->
+               <iframe class="img-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>
               </div>
               <div class="music-info">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
               </div>
               <div class="track track2">
-                <!--<iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>-->
+                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
               </div>
               <div class="music-info">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
@@ -145,16 +146,27 @@
                   <p>I just need some basic info about you and your project, please fill out the form below.</p>
                   <!--Contact Form-->
                   <form class="contact-form" action="#"  method="POST">
-                    <label for="name"></label>
-                    <!--<span class="label-text">First Name</span>-->
-                    <input class="gutter" type="text" name="name" placeholder="Name *">
-                    <label for="email"></label>
-                    <input type="text" name="email" placeholder="Email *">
-                    <label for="phone"></label>
-                    <input class="gutter" type="text" name="phone" placeholder="Phone number">
-                    <label for="website"></label>
-                    <input type="text" name="website" placeholder="Website">
-                    <textarea class="message gutter" placeholder="Details about your project"></textarea>
+                   <div class="form-row">
+                      <label class="gutter" for="name">
+                        <span class="label-text">Name</span>
+                        <input  type="text" name="name" placeholder="John/Jane Doe *">
+                      </label>
+                      <label for="email">
+                        <span class="label-text">Email</span>
+                        <input type="text" name="email" placeholder="you@email.com *">
+                      </label>
+                   </div>
+                    <div class="form-row">
+                      <label class="gutter" for="phone">
+                        <span class="label-text">Phone Number</span>
+                        <input type="text" name="phone" placeholder="555-555-5555">
+                      </label>
+                      <label for="website">
+                        <span class="label-text">Website</span>
+                        <input type="text" name="website" placeholder="yourwebsite.com">
+                      </label>
+                    </div>
+                    <textarea class="message" placeholder="Details about your project *"></textarea>
                     <input class="submit-button gutter" type="submit" name="submit" value="Submit">
                   </form>
                   <!--End Contact Form-->
