changed main logo by  eliminating svg text and adding it through HTML

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
           <div class="logo-background"></div>
           <a class="logo" href="index.html">
             <img src="img/lowcitieslogo.svg" alt="main-logo">
+            <div class="logo-text">
+              <h1>LOWCITIES</h1>
+              <h3>DESIGN/DEVELOPMENT/MUSIC/ART</h3>
+            </div>
           </a>
         </div>
     </div>
@@ -75,7 +79,9 @@
           <!--End of About Section-->
           <!--Portfolio section-->
           <div id="portfolio" class="full">
-            <h1 class="headline">Web Design Portfolio</h1>
+            <div class="headline">
+              <h1 class="headline-text" >Web Design Portfolio</h1>
+            </div>
             <div class="container fade-container">
               <div class="portfolio-content">
                 <div class="site-one-photo img-shadow"></div>
@@ -97,7 +103,9 @@
           <!--End of portfolio section-->
           <!--Music page-->
           <div id="music"  class="music full">
-            <h1 class="headline">MUSIC PRODUCTION</h1>
+            <div class="headline">
+              <h1 class="headline-text">MUSIC PRODUCTION</h1>
+            </div>
             <!--<img class="headline" src="img/headlinesample.svgz">-->
             <div class="container fade-container">
               <div class="music-info">
@@ -121,7 +129,9 @@
           <!--Photo section-->
          <section>
             <div id="photoContainer"  class="photoContainer full">
-              <h1 class="headline">Photography/<br>Graphic Design</h1>
+              <div class="headline">
+                <h1 class="headline-text">Photography/Graphic Design</h1>
+              </div>
               <div class="container fade-container photo-flex">
 
                 <div class="photoBox">
