--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="logo-container">
           <div class="logo-background"></div>
           <a class="logo" href="index.html">
-            <img src="img/lowcitieslogo.svg" alt="main-logo">
+            <img src="img/result.svg" alt="main-logo">
             <div class="logo-text">
               <h1>LOWCITIES</h1>
               <h3>DESIGN/DEVELOPMENT/MUSIC/ART</h3>
@@ -68,7 +68,6 @@
             <div id="about" class="about container">
               <div class="about-container">
                 <div class="about-background"></div>
-                <!--<div class="biopic img-shadow"></div>-->
                     <div class="intro">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
                       </p>
@@ -80,19 +79,19 @@
           <!--Portfolio section-->
           <div id="portfolio" class="full">
             <div class="headline">
-              <h1 class="headline-text" >Web Design Portfolio</h1>
+              <h1 class="headline-text">Web Design Portfolio</h1>
             </div>
             <div class="container fade-container">
               <div class="portfolio-content">
-                <div class="site-one-photo img-shadow"></div>
-                <div class="site-one-info">
+                <div class="site-one-photo top-shadow"></div>
+                <div class="site-one-info top-shadow">
                   <h2>Alan Watts: A Brief Tribute</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
               </div>
               <div class="portfolio-content">
-                <div class="site-two-photo img-shadow"></div>
-                <div class="site-two-info">
+                <div class="site-two-photo top-shadow"></div>
+                <div class="site-two-info  top-shadow">
                   <h2>Burden of Memes: A Werner Herzog Quote Generator</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
@@ -108,20 +107,26 @@
             </div>
             <!--<img class="headline" src="img/headlinesample.svgz">-->
             <div class="container fade-container">
-              <div class="music-info">
+             <div class="music-content">
+                <div class="music-info top-shadow">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+                </div>
+                  <div class="track track1">
+                 <iframe class="top-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>
+                </div>
+             </div>
+              <div class="music-content">
+                <div class="music-info top-shadow">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+                </div>
+                <div class="track track2">
+                  <iframe class="top-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                </div>
+              </div>
+              <div class="music-content">
+                <div class="music-info top-shadow">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              </div>
-                <div class="track track1">
-               <iframe class="img-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>
-              </div>
-              <div class="music-info">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              </div>
-              <div class="track track2">
-                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-              </div>
-              <div class="music-info">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+                </div>
               </div>
 
             </div>
@@ -163,7 +168,7 @@
                       </label>
                       <label for="email">
                         <span class="label-text">Email</span>
-                        <input type="text" name="email" placeholder="you@email.com *">
+                        <input class="email" type="text" name="email" placeholder="you@email.com *">
                       </label>
                    </div>
                     <div class="form-row">
