made the modal form scrollable

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                   <form class="contact-form" action="#"  method="POST">
                    <div class="form-row">
                       <label class="gutter" for="name">
-                        <span class="label-text">Name</span>
-                        <input  type="text" name="name" placeholder="John/Jane Doe *">
+                        <span class="label-text">Name *</span>
+                        <input  type="text" name="name" placeholder="John/Jane Doe">
                       </label>
                       <label for="email">
-                        <span class="label-text">Email</span>
+                        <span class="label-text">Email *</span>
                         <input class="email" type="text" name="email" placeholder="you@email.com *">
                       </label>
                    </div>
