changed the photography headline

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
          <section>
             <div id="photoContainer"  class="photoContainer full">
               <div class="headline">
-                <h1 class="headline-text">Photography/Graphic Design</h1>
+                <h1 class="headline-text">Photography</h1>
               </div>
               <div class="container fade-container photo-flex">
 
