--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
                   <div class="track track1">
-                 <iframe class="top-shadow" style="border: 0; width: 80%; height: 250px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe>
+                  <iframe class="top-shadow" style="border: 0; width: 80%; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe> 
                 </div>
              </div>
               <div class="music-content">
@@ -120,7 +120,8 @@
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
                 <div class="track track2">
-                  <iframe class="top-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                  <iframe style="border: 0; width: 80%; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/track=183301591/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/pummel">Pummel by LowCities</a></iframe>
+                   <!-- <iframe class="top-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>  -->
                 </div>
               </div>
               <div class="music-content">
@@ -138,7 +139,6 @@
                 <h1 class="headline-text">Photography</h1>
               </div>
               <div class="container fade-container photo-flex">
-
                 <div class="photoBox">
                   <div id="photoFrame"></div>
                   <div id="photoSelector" class="photoSelector"></div>
@@ -157,18 +157,18 @@
               <div class="modal-overlay">
                 <div class="modal-wrap">
                   <div class="modal-close">&#10006;</div>
-                  <h2>General Info</h2>
-                  <p>I just need some basic info about you and your project, please fill out the form below.</p>
+                  <h2>Tell me about yourself</h2>
+                  <p>Want to hire me? Collaborate or just get in touch? Please fill out the form below.</p>
                   <!--Contact Form-->
                   <form class="contact-form" action="#"  method="POST">
                    <div class="form-row">
                       <label class="gutter" for="name">
                         <span class="label-text">Name *</span>
-                        <input  type="text" name="name" placeholder="John/Jane Doe">
+                        <input class="required" type="text" name="name" placeholder="John/Jane Doe">
                       </label>
                       <label for="email">
                         <span class="label-text">Email *</span>
-                        <input class="email" type="text" name="email" placeholder="you@email.com *">
+                        <input class="email required" type="text" name="email" placeholder="you@email.com">
                       </label>
                    </div>
                     <div class="form-row">
@@ -181,8 +181,12 @@
                         <input type="text" name="website" placeholder="yourwebsite.com">
                       </label>
                     </div>
-                    <textarea class="message" placeholder="Details about your project *"></textarea>
-                    <input class="submit-button gutter" type="submit" name="submit" value="Submit">
+                    <label>  
+                      <span class="label-text gutter">Details *</span>
+                      <textarea class="message required" placeholder="Details about your inquiry. Whats the nature of your project? What would you like to accomplish? "></textarea>
+                      <span class="reminder">*required field</span>
+                      <input class="submit-button gutter" type="submit" name="submit" value="Submit">
+                    </label>
                   </form>
                   <!--End Contact Form-->
                 </div>
