updated links to social media

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       <div class="social">
         <a href="http://twitter.com/lowcities"><i class="twitter"></i></a>
         <a href="http://instagram.com/lowcities"><i class="insta"></i></a>
-        <a><i class="linkdin"></i></a>
-        <a><i class="github"></i></a>
+        <a href="https://www.linkedin.com/in/david-low-671492132/"><i class="linkdin"></i></a>
+        <a href="https://github.com/lowcities"><i class="github"></i></a>
       </div>  
       <h3>&copy;2017 David Low</h3>
     </footer>
