made stylist changes to headline banners

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
             <div class="container fade-container">
               <div class="portfolio-content">
                 <div class="site-one-photo top-shadow"></div>
-                <div class="site-one-info top-shadow">
+                <div class="site-one-info top-shadow greydient">
                   <h2>Alan Watts: A Brief Tribute</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
               </div>
               <div class="portfolio-content">
                 <div class="site-two-photo top-shadow"></div>
-                <div class="site-two-info  top-shadow">
+                <div class="site-two-info  top-shadow greydient">
                   <h2>Burden of Memes: A Werner Herzog Quote Generator</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
@@ -105,10 +105,9 @@
             <div class="headline">
               <h1 class="headline-text">MUSIC PRODUCTION</h1>
             </div>
-            <!--<img class="headline" src="img/headlinesample.svgz">-->
             <div class="container fade-container">
              <div class="music-content">
-                <div class="music-info top-shadow">
+                <div class="music-info top-shadow greydient">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
                   <div class="track track1">
@@ -116,16 +115,15 @@
                 </div>
              </div>
               <div class="music-content">
-                <div class="music-info top-shadow">
+                <div class="music-info top-shadow greydient">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
                 <div class="track track2">
                   <iframe style="border: 0; width: 80%; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/track=183301591/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/pummel">Pummel by LowCities</a></iframe>
-                   <!-- <iframe class="top-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>  -->
                 </div>
               </div>
               <div class="music-content">
-                <div class="music-info top-shadow">
+                <div class="music-info top-shadow greydient">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
               </div>
@@ -138,7 +136,7 @@
               <div class="headline">
                 <h1 class="headline-text">Photography</h1>
               </div>
-              <div class="container fade-container photo-flex">
+              <div class="container fade-container photo-flex top-shadow greydient">
                 <div class="photoBox">
                   <div id="photoFrame"></div>
                   <div id="photoSelector" class="photoSelector"></div>
@@ -154,7 +152,7 @@
           <section>
             <div id="contact" class="contact"> 
               <div class="modal-button">Contact Me</div>
-              <div class="modal-overlay">
+              <div class="modal-overlay greydient">
                 <div class="modal-wrap">
                   <div class="modal-close">&#10006;</div>
                   <h2>Tell me about yourself</h2>
@@ -201,7 +199,7 @@
         <a href="https://www.linkedin.com/in/david-low-671492132/"><i class="linkdin"></i></a>
         <a href="https://github.com/lowcities"><i class="github"></i></a>
       </div>  
-      <h3>&copy;2017 David Low</h3>
+      <h3 class="greydient">&copy;2017 David Low</h3>
     </footer>
     </div>
     <script
