added comments to HTML and javascript

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+    <!--overlay gives body of page a screen like effect-->
     <div class="overlay"></div>
   <header>
+    <!--Large screen header-->
     <div class="header-overflow">
       <div class="city-background"></div>
         <div class="logo-container">
@@ -26,17 +28,21 @@
           </a>
         </div>
     </div>
+      <!--End of large screen header-->
+      <!--Mobile header-->
       <div class="mobile-header">
         <div class="city-background mobile-city" style="width: 100%; padding-right: 0;"></div>
+        <!--Mobile menu toggle button-->
         <div class="nav_menu">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-        </div>  
+        </div>
+          <!--End of mobile menu toggle button-->
         <div class="mobile-logo">LOWCITIES/MULTI-MEDIA PRODUCTION</div>
       </div>
-    
+      <!--End of mobile header-->
   </header>
   <body>
     <div class="wrapper">
