added changes to intro and music section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
               <div class="about-container">
                 <div class="about-background"></div>
                     <div class="intro">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
+                      <h1>New Site Design Coming Soon!</h1>
+                      <p>Web and Software developer with a passion for design and working with cutting edges technologies.
+                        Currently focused on developing for the Bitcoin Cash network helping bring user friendly applications and financial 
+                        sovereignty to the masses.
                       </p>
                     </div>
               </div>
@@ -113,14 +116,11 @@
             </div>
             <div class="container fade-container">
              <div class="music-content">
-                <div class="music-info top-shadow greydient">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-                </div>
-                  <div class="track track1">
-                  <iframe class="top-shadow" style="border: 0; width: 80%; height: 400px;" src="https://bandcamp.com/EmbeddedPlayer/track=781937637/size=large/bgcol=333333/linkcol=0f91ff/tracklist=false/transparent=true/" seamless><a href="http://lowcities.bandcamp.com/track/wake-up">Wake Up by LowCities</a></iframe> 
-                </div>
+              <div class="track track1">
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1140218299&color=%232c2c2c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/musumashae" title="daviDLow" target="_blank" style="color: #cccccc; text-decoration: none;"></a><a href="https://soundcloud.com/musumashae/garaj-xcape" title="Garaj-xcape" target="_blank" style="color: #cccccc; text-decoration: none;"></a></div>
+              </div>
              </div>
-              <div class="music-content">
+              <!-- <div class="music-content">
                 <div class="music-info top-shadow greydient">
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
@@ -132,7 +132,7 @@
                 <div class="music-info top-shadow greydient">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
                 </div>
-              </div>
+              </div> -->
 
             </div>
           </div>
@@ -205,7 +205,7 @@
         <a href="https://www.linkedin.com/in/david-low-671492132/"><i class="linkdin"></i></a>
         <a href="https://github.com/lowcities"><i class="github"></i></a>
       </div>  
-      <h3 class="greydient">&copy;2017 David Low</h3>
+      <h3 class="greydient">&copy;2021 Lowcities</h3>
     </footer>
     </div>
     <script
